Implement KeyboardController class and fix #5

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <h1>2p Snake</h1>
   <p>Move with WASD and arrow keys. Get more points than the other player.</p>
   <canvas id="canvas" height="400px" width="400px">Your browser does not support canvas. Please try again with a different browser.</canvas>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
+  <script src="scripts/js/jquery-2.0.3.min.js"></script>
   <script src="scripts/js/snake.js"></script>
 </body>
 </html>
